<resources>
    <string name="app_name">QABank</string>

    <!-- Welcome -->
    <string name="login_logo_content_description">logo QABank</string>
    <string name="login_open_account">Abrir uma conta</string>
    <string name="login_access_account">Acessar minha conta</string>
    <string name="login_slogan">O banco digital que facilita sua vida com segurança e qualidade</string>
    <string name="login_qr_code">Ícone de Qr code</string>
    <string name="login_bar_code">Ícone de pagamento de boleto</string>
    <string name="login_money_box">Ícone dinheiro guardado</string>
    <string name="login_card">Ícone de cartão</string>

    <!-- Login -->
    <string name="login_toolbar_text">Login</string>
    <string name="login_title_text">Acesse sua conta</string>
    <string name="login_informative_text">Insira seu documento para acessar a conta</string>
    <string name="login_document_text">CPF</string>
    <string name="fragment_login_password_enter_text">Entrar</string>
    <string name="fragment_login_password_app_text">Senha do aplicativo</string>
    <string name="fragment_login_password_reset_text"><u>Esqueci minha senha</u></string>

    <!-- Account Opening -->
    <string name="opening_account_title_text">Abrir conta</string>
    <string name="opening_account_help_title_text">Ajuda</string>

    <!-- Fragment Cpf And Terms -->
    <string name="fragment_cpf_and_terms_title_text">Qual seu CPF?</string>
    <string name="fragment_cpf_and_terms_account_opening_check_box">Declaro que li e aceito o <font color="#11113D"><b>Contrato de Abertura de Conta</b></font></string>
    <string name="fragment_cpf_and_terms_check_box">Declaro que li e aceito os <font color="#11113D"><b>Termos de Uso</b></font></string>
    <string name="fragment_cpf_and_terms_privacy_policy_check_box">Declaro que li e aceito as <font color="#11113D"><b>Políticas de Privacidade</b></font></string>

    <!-- Fragment Account Opening Steps -->
    <string name="fragment_account_opening_steps_first_title_text">Dados básicos</string>
    <string name="fragment_account_opening_steps_second_title_text">Envio de documento</string>
    <string name="fragment_account_opening_steps_second_description_text">Você fará o envio de um documento com foto, e uma selfie.</string>

    <!-- Fragment Name Registration -->
    <string name="fragment_name_registration_title_text">Qual seu nome completo?</string>
    <string name="fragment_name_registration_description_text">Digite seu nome completo igual ao seu RG, sem abreviações!</string>
    <string name="fragment_name_registration_name_text">Nome completo</string>

    <!-- Fragment Phone Registration -->
    <string name="fragment_phone_registration_title_text">Qual seu número de celular?</string>
    <string name="fragment_phone_registration_description_text">Ele será utilizado para confirmações de segurança.</string>
    <string name="fragment_name_registration_informative_text">Número com DDD</string>

    <!-- Fragment Email Registration -->
    <string name="fragment_email_registration_title_text">Qual seu e-mail?</string>
    <string name="fragment_email_registration_description_text">Ele será utilizado para confirmações de segurança.</string>
    <string name="fragment_email_registration_informative_text">Seu melhor e-mail</string>

    <!-- Fragment Email Registration -->
    <string name="fragment_gender_registration_title_text">Sexo</string>
    <string name="fragment_gender_registration_description_text">Deve ser o mesmo que consta em seus documentos oficiais.</string>
    <string name="fragment_gender_registration_masculine_text">Masculino</string>
    <string name="fragment_gender_registration_feminine_text">Feminino</string>

    <!-- Fragment Declaration -->
    <string name="fragment_declaration_title_text">Declaração de capacidade</string>
    <string name="fragment_declaration_description_text">Selecione se outra pessoa é legalmente responsável por você.</string>
    <string name="fragment_declaration_question_about_disability_text">Você é uma pessoa legalmente incapaz?</string>
    <string name="fragment_declaration_politically_exposed_person_title_text">Pessoa Politicamente Exposta</string>
    <string name="fragment_declaration_politically_exposed_person_description_text">Se você é uma pessoa politicamente exposta, selecione a opção abaixo.</string>
    <string name="fragment_declaration_question_about_politically_exposed_person_text">Você é uma pessoa politicamente exposta?</string>
    <string name="fragment_declaration_legally_incapacitated_person_help_text">Botão de ajuda: Ative o botão a esquerda se você é uma pessoa legalmente incapaz?</string>
    <string name="fragment_declaration_politically_exposed_help_text">Botão de ajuda: Ative o botão a esquerda se você é uma pessoa politicamente exposta?</string>

    <!-- Fragment Address Registration -->
    <string name="fragment_address_registration_title_text">Endereço residencial</string>
    <string name="fragment_address_registration_description_text">Complete o endereço</string>
    <string name="fragment_address_registration_zip_code_text">CEP</string>
    <string name="fragment_address_registration_number_text">Número</string>
    <string name="fragment_address_registration_complement_text">Complemento (opcional)</string>
    <string name="fragment_address_registration_neighborhood_text">Bairro</string>
    <string name="fragment_address_registration_street_information_text">Avenida / Rua / Rodovia / etc</string>

    <!-- Fragment Income -->
    <string name="fragment_income_title_text">Renda</string>
    <string name="fragment_income_description_text">Informe sua renda atual</string>

    <!-- Fragment Saving Information -->
    <string name="fragment_saving_information_title_text">Salvando Informações</string>
    <string name="fragment_saving_information_description_text">Estamos salvando as informações e preparando tudo para a próxima etapa!</string>

    <!-- Fragment Password Registration -->
    <string name="fragment_password_registration_first_criterion_text">Use letras e números</string>
    <string name="fragment_password_registration_second_criterion_text">Use no mínimo 6 caracteres</string>
    <string name="fragment_password_registration_third_criterion_text">Use pelo menos 1 letra maiúscula</string>
    <string name="fragment_password_registration_fourth_criterion_text">Use pelo menos 1 letra minúscula</string>
    <string name="fragment_password_registration_fifth_criterion_text">Use ao menos 1 caractere especial</string>

    <!-- Fragment Password Confirmation -->
    <string name="fragment_password_confirmation_description_text">Insira a mesma senha definida anteriormente</string>
    <string name="fragment_password_confirmation_instruction_text">Deve ser igual</string>

    <!-- Fragment Validate Information -->
    <string name="fragment_validate_information_title_text">Validando Informações</string>
    <string name="fragment_validate_information_description_text">Estamos vendo se tudo está certo e criando sua senha de acesso</string>

    <!-- Fragment Registration Confirmation -->
    <string name="fragment_registration_confirmation_back_to_top_text">Voltar para tela inicial</string>
    <string name="fragment_registration_confirmation_title_text">Seu cadastro foi finalizado com sucesso!</string>
    <string name="fragment_registration_confirmation_analysis_notice_text">Já estamos analisando seus dados, mas pode levar alguns minutos. Você receberá uma notificação assim que tivermos novidades.</string>


    <!-- Generic Strings -->
    <string name="account_opening_steps_description_text">Veja como funciona as etapas de abertura de conta</string>
    <string name="account_opening_steps_first_description_text">Você nos fornece algumas informações básicas sobre você.</string>
    <string name="account_opening_steps_third_title_text">Criar senhas</string>
    <string name="account_opening_steps_third_description_text">Nessa etapa você define a senha de acesso ao aplicativo e também, a de movimentação.</string>
    <string name="account_opening_steps_fourth_title_text">Análise</string>
    <string name="account_opening_steps_fourth_description_text">Estaremos analisando todas informações e dados do seu perfil. Assim que a análise é finalizada, te avisaremos, ok?</string>
    <string name="button_advance_text">Avançar</string>
    <string name="button_continue_text">Continuar</string>
    <string name="add_user_text">Icone adicionar usuário</string>
    <string name="password_text">Senha do aplicativo</string>
    <string name="password_registration_description_text">Defina uma senha de para acessar seu aplicativo</string>
    <string name="one_number">1</string>
    <string name="two_number">2</string>
    <string name="three_number">3</string>
    <string name="four_number">4</string>
    <string name="current_step_label_text">Você está aqui</string>

</resources>