<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".activity.WelcomeActivity">

    <ImageView
        android:id="@+id/business_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/login_logo_content_description"
        android:src="@drawable/ic_business_logo"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/login_slogan"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/business_name" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="72dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_slogan">

        <ImageView
            android:id="@+id/icon_bar_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:contentDescription="@string/login_bar_code"
            android:src="@drawable/bar_code" />

        <ImageView
            android:id="@+id/icon_qr_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:contentDescription="@string/login_qr_code"
            android:src="@drawable/qr_code" />

        <ImageView
            android:id="@+id/icon_money_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:contentDescription="@string/login_money_box"
            android:src="@drawable/money_box" />

        <ImageView
            android:id="@+id/icon_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:contentDescription="@string/login_card"
            android:src="@drawable/card" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:background="@drawable/rounded_top_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/open_account_button"
            style="@style/Widget.QABank.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:padding="16dp"
            app:layout_constraintWidth_max="320dp"
            android:text="@string/login_open_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/access_account_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            app:layout_constraintWidth_max="320dp"
            android:text="@string/login_access_account"
            android:textColor="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/open_account_button"
            app:strokeColor="@color/primaryColor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>