<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/business_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/login_logo_content_description"
        android:src="@drawable/ic_business_logo"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/login_slogan"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/business_name" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_slogan">

        <ImageView
            android:id="@+id/icon_bar_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:src="@drawable/bar_code"
            android:contentDescription="@string/login_bar_code" />

        <ImageView
            android:id="@+id/icon_qr_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:src="@drawable/qr_code"
            android:contentDescription="@string/login_qr_code" />

        <ImageView
            android:id="@+id/icon_money_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:src="@drawable/money_box"
            android:contentDescription="@string/login_money_box" />

        <ImageView
            android:id="@+id/icon_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="24"
            android:src="@drawable/card"
            android:contentDescription="@string/login_card"/>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottom_sheet_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <Button
                android:id="@+id/open_account_button"
                style="@style/Widget.QABank.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:padding="16dp"
                android:text="@string/login_open_account"
                app:layout_constraintEnd_toStartOf="@+id/login_end_guideline"
                app:layout_constraintStart_toStartOf="@id/login_start_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/access_account_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:text="@string/login_access_account"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toStartOf="@+id/login_end_guideline"
                app:layout_constraintStart_toStartOf="@+id/login_start_guideline"
                app:layout_constraintTop_toBottomOf="@id/open_account_button"
                app:strokeColor="@color/primaryColor" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/login_start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/login_end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="16dp"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>