<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DeclarationFragment">

    <TextView
        android:id="@+id/fragment_declaration_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_declaration_title_text"
        android:textColor="@color/primaryColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_declaration_description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/fragment_declaration_description_text"
        android:textColor="@color/primaryColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/fragment_declaration_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/fragment_declaration_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fragment_declaration_title_text_view" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/fragment_declaration_incapacitated_person_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fragment_declaration_question_about_disability_text"
        app:layout_constraintEnd_toStartOf="@+id/fragment_declaration_end_guideline"
        app:layout_constraintStart_toEndOf="@+id/fragment_declaration_incapacitated_person_help_image_button"
        app:layout_constraintTop_toBottomOf="@+id/fragment_declaration_description_text_view" />

    <ImageButton
        android:id="@+id/fragment_declaration_incapacitated_person_help_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/fragment_declaration_legally_incapacitated_person_help_text"
        android:src="@drawable/help_circle"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintStart_toStartOf="@+id/fragment_declaration_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fragment_declaration_description_text_view"
        app:layout_constraintWidth_min="48dp" />

    <TextView
        android:id="@+id/fragment_declaration_politically_exposed_person_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fragment_declaration_politically_exposed_person_title_text"
        android:textColor="@color/primaryColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fragment_declaration_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/fragment_declaration_start_guideline"
        app:layout_constraintTop_toTopOf="@+id/fragment_declaration_view" />

    <TextView
        android:id="@+id/fragment_declaration_politically_exposed_person_description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/fragment_declaration_politically_exposed_person_description_text"
        android:textColor="@color/primaryColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/fragment_declaration_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/fragment_declaration_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fragment_declaration_politically_exposed_person_title_text_view" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/fragment_declaration_politically_exposed_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fragment_declaration_question_about_politically_exposed_person_text"
        app:layout_constraintEnd_toStartOf="@+id/fragment_declaration_end_guideline"
        app:layout_constraintStart_toEndOf="@+id/fragment_declaration_politically_exposed_help_image_button"
        app:layout_constraintTop_toBottomOf="@+id/fragment_declaration_politically_exposed_person_description_text_view" />

    <ImageButton
        android:id="@+id/fragment_declaration_politically_exposed_help_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/fragment_declaration_politically_exposed_help_text"
        android:src="@drawable/help_circle"
        app:layout_constraintHeight_min="48dp"
        app:layout_constraintStart_toStartOf="@+id/fragment_declaration_start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fragment_declaration_politically_exposed_person_description_text_view"
        app:layout_constraintWidth_min="48dp" />

    <View
        android:id="@+id/fragment_declaration_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/fragment_declaration_incapacitated_person_switch"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/fragment_declaration_advance_button"
        style="@style/Widget.QABank.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/primaryColor"
        android:padding="16dp"
        android:text="@string/button_advance_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_declaration_end_guideline"
        app:layout_constraintStart_toStartOf="@+id/fragment_declaration_start_guideline"
        app:layout_constraintWidth_max="320dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_declaration_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_declaration_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>